src/components/Todos/TodoItem.module.css
.todo-item {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin: 0.5rem;
  border-bottom: 1px solid #ddd;
  padding-bottom: 1rem;
}

.todo-item:last-child {
  border: none;
  padding: 0;
}

.todo-item__contents {
  overflow: scroll;
  padding: 0 1rem;
}

.todo-item__title,
.todo-item__description {
  color: black;
}

